<resources>
    <string name="app_name">YouWeather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="signInFailed">Sign-In failed</string>
    <string name="application_logo_content_description">Application logo</string>
    <string name="action_sign_out">Sign out</string>
    <string name="home">Home</string>
    <string name="search_location">Search for a location</string>
    <string name="most_recent_weather_report_from_other_users">Most recent weather report for this location:</string>
    <string name="new_report">New report</string>
    <string name="account">Account</string>
    <string name="hello">Hello, %1$s!</string>
    <string name="history_of_your_reports">History of %1$s\'s reports</string>
    <string name="location">Location</string>
    <string name="date_time">Date-time</string>
    <string name="weather">Weather</string>
    <string name="see_on_the_map">See on the map</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="insert_new_report">Insert new report</string>
    <string name="insert">Insert</string>
    <string name="location_name">Location</string>

    <!-- WEATHER CONDITIONS start -->
    <string name="WEATHER200">Thunderstorm with light rain</string>
    <string name="WEATHER201">Thunderstorm with rain</string>
    <string name="WEATHER202">Thunderstorm with heavy rain</string>
    <string name="WEATHER210">Light thunderstorm</string>
    <string name="WEATHER211">Thunderstorm</string>
    <string name="WEATHER212">Heavy thunderstorm</string>
    <string name="WEATHER221">Ragged thunderstorm</string>
    <string name="WEATHER230">Thunderstorm with light drizzle</string>
    <string name="WEATHER231">Thunderstorm with drizzle</string>
    <string name="WEATHER232">Thunderstorm with heavy drizzle</string>
    <string name="WEATHER300">Light intensity drizzle</string>
    <string name="WEATHER301">Drizzle</string>
    <string name="WEATHER302">Heavy intensity drizzle</string>
    <string name="WEATHER310">Light intensity drizzle rain</string>
    <string name="WEATHER311">Drizzle rain</string>
    <string name="WEATHER312">Heavy intensity drizzle rain</string>
    <string name="WEATHER313">Shower rain and drizzle</string>
    <string name="WEATHER314">Heavy shower rain and drizzle</string>
    <string name="WEATHER321">Shower drizzle</string>
    <string name="WEATHER500">Light rain</string>
    <string name="WEATHER501">Moderate rain</string>
    <string name="WEATHER502">Heavy intensity rain</string>
    <string name="WEATHER503">Very heavy rain</string>
    <string name="WEATHER504">Extreme rain</string>
    <string name="WEATHER511">Freezing rain</string>
    <string name="WEATHER520">Light intensity shower rain</string>
    <string name="WEATHER521">Shower rain</string>
    <string name="WEATHER522">Heavy intensity shower rain</string>
    <string name="WEATHER531">Ragged shower rain</string>
    <string name="WEATHER600">Light snow</string>
    <string name="WEATHER601">Snow</string>
    <string name="WEATHER602">Heavy snow</string>
    <string name="WEATHER611">Sleet</string>
    <string name="WEATHER612">Light shower sleet</string>
    <string name="WEATHER613">Shower sleet</string>
    <string name="WEATHER615">Light rain and snow</string>
    <string name="WEATHER616">Rain and snow</string>
    <string name="WEATHER620">Light shower snow</string>
    <string name="WEATHER621">Shower snow</string>
    <string name="WEATHER622">Heavy shower snow</string>
    <string name="WEATHER701">Mist</string>
    <string name="WEATHER711">Smoke</string>
    <string name="WEATHER721">Haze</string>
    <string name="WEATHER731">Sand/dust whirls</string>
    <string name="WEATHER741">Fog</string>
    <string name="WEATHER751">Sand</string>
    <string name="WEATHER761">Dust</string>
    <string name="WEATHER762">Volcanic ash</string>
    <string name="WEATHER771">Squalls</string>
    <string name="WEATHER781">Tornado</string>
    <string name="WEATHER800">Clear sky</string>
    <string name="WEATHER801">Few clouds: 11–25%</string>
    <string name="WEATHER802">Scattered clouds: 25–50%</string>
    <string name="WEATHER803">Broken clouds: 51–84%</string>
    <string name="WEATHER804">Overcast clouds: 85–100%</string>
    <!-- WEATHER CONDITIONS end -->

    <string name="weather_condition">Weather condition</string>
    <string name="weather_icon">Weather icon</string>
    <string name="use_current_position">Use current position</string>
    <string name="no_results">No results</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="photo_from_the_user_for_report">Photo taken by the user for the insertion report</string>
    <string name="take_another_photo">Take another photo and replace</string>
    <string name="no_app_for_action">There is no app that support this action</string>
    <string name="Not_found_city_for_user_position">No city found for your position</string>
    <string name="cannot_insert_without_location">Cannot insert without a location</string>
    <string name="Unable_to_retrieve_entities_from_DB">Unable to retrieve entities from the DB</string>
    <string name="date_short_format">dd-MMM-yyyy</string>
    <string name="filtered_reports_from_to">Filtered reports from %1$s to %2$s</string>
    <string name="ever">ever</string>
    <string name="click_on_a_report_to_see_details">Click on a report to see details</string>

    <string name="city">City: %1$s</string>
    <string name="coordinates">Latitude: %1$.6f, Longitude: %2$.6f</string>
    <string name="reported_on_date">Reported on: %1$s</string>
    <string name="app_icon">App icon</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="waiting_for_location">Waiting for your location</string>
    <string name="longitude">Longitude: %1$f</string>
    <string name="latitude">Latitude: %1$f</string>
    <string name="latitude_and_longitude">Latitude: %1$f, Longitude: %2$f</string>
    <string name="weather_report_added">Weather report correctly added</string>
    <string name="error_unable_to_retrieve_data">Unable to retrieve the data</string>
    <string name="loading">Loading</string>
    <string name="blank_string" />
    <string name="unable_to_set_sunrise_and_sunset_coordinates_for_city">Unable to set coordinates for city</string>

    <!-- TODO: missing translations -->
</resources>